--- a/config.env
+++ b/config.env
@@ -1,8 +1,6 @@
 NODE_ENV=development
 PORT=3000
-# DATABASE=mongodb+srv://21ce111:<PASSWORD>@cluster0.nwwwppu.mongodb.net/to-do-list?=true&w=majority
-DATABASE=mongodb+srv://21ce111:Rushit@123@to-do-list.5glrv9n.mongodb.net/to-do-list?=true&w=majority
-# DATABASE=mongodb+srv://21ce111:<PASSWORD>@cluster0.gc9brto.mongodb.net/?retryWrites=true&w=majority
-DATABASE_PASSWORD=Rushit@123
-DATABASE_LOCAL=mongodb://localhost:27017/to-do-list
-# DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE= your Database url (if you want to connet with mongodb atlas)
+DATABASE_PASSWORD=Database Password
+DATABASE_LOCAL=mongodb://localhost:27017/to-do-list (if you want to connet with local )
+
